tests/NormalTests/paczka1/small_fuzzy/49099992.err
Error in line 6: 8af S294 1*,*
Error in line 13: ZUxcR S516 95,39
